# src/main/kotlin/com/spasinnya/presentation/model/PurchaseResponse.kt
@@ -1,9 +1,0 @@
-package com.spasinnya.presentation.model
-
-import kotlinx.serialization.Serializable
-
-@Serializable
-data class PurchaseResponse(
-    val bookId: Long,
-    val purchased: Boolean
-)
